--- a/kitchensink/jq.ui.slate.css
+++ b/kitchensink/jq.ui.slate.css
@@ -812,6 +812,17 @@ select[disabled]~div { opacity:.7; }
 		-webkit-transform:translate3d(0px,0px,0px) !important;
 		-webkit-transition:none !important;
 	}
+	.hasMenu.to-on {
+		-webkit-transition: none !important;
+	}
+	.hasMenu.on, .hasMenu.to-on {
+		-webkit-transform:translate3d(0px,0px,0px) !important;
+		-webkit-transition:none !important;
+	}
+	.hasMenu.to-off {
+		-webkit-transform:translate3d(0px,0px,0px) !important;
+		-webkit-transition:none !important;
+	}
     
 }
 
